<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/list_side_margin"
    android:layout_marginEnd="@dimen/list_side_margin"
    android:layout_marginBottom="@dimen/list_middle_margin"
    app:cardElevation="14dp"
    app:cardMaxElevation="14dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/location_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="City"
            app:layout_constraintBottom_toTopOf="@id/temp_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/Title" />

        <TextView
            android:id="@+id/temp_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/temperature"
            app:layout_constraintBottom_toTopOf="@id/press_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/location_name"
            style="@style/CardText"/>

        <TextView
            android:id="@+id/press_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/pressure"
            app:layout_constraintBottom_toTopOf="@id/humidity_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/temp_label"
            style="@style/CardText"/>

        <TextView
            android:id="@+id/humidity_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/humidity"
            app:layout_constraintBottom_toTopOf="@id/max_temp_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/press_label"
            style="@style/CardText"/>

        <TextView
            android:id="@+id/max_temp_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/maximum_temperature"
            app:layout_constraintBottom_toTopOf="@id/min_temp_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/humidity_label"
            style="@style/CardText"/>

        <TextView
            android:id="@+id/min_temp_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/minimum_temperature"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/max_temp_label"
            style="@style/CardText"/>

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_ids="temp_label,humidity_label,max_temp_label,press_label,min_temp_label" />

        <TextView
            android:id="@+id/temp_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Temp value"
            app:layout_constraintBottom_toTopOf="@id/press_val"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/barrier"
            app:layout_constraintTop_toBottomOf="@id/location_name"
            style="@style/CardText"/>


        <TextView
            android:id="@+id/press_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Press value"
            app:layout_constraintBottom_toTopOf="@id/humidity_val"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/barrier"
            app:layout_constraintTop_toBottomOf="@id/temp_val"
            style="@style/CardText"/>


        <TextView
            android:id="@+id/humidity_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Humidity value"
            app:layout_constraintBottom_toTopOf="@id/max_temp_val"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/barrier"
            app:layout_constraintTop_toBottomOf="@id/press_val"
            style="@style/CardText"/>


        <TextView
            android:id="@+id/max_temp_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Maximum value"
            app:layout_constraintBottom_toTopOf="@id/min_temp_val"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/barrier"
            app:layout_constraintTop_toBottomOf="@id/humidity_val"
            style="@style/CardText"/>

        <TextView
            android:id="@+id/min_temp_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Maximum value"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/barrier"
            app:layout_constraintTop_toBottomOf="@id/max_temp_val"
            style="@style/CardText"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
